<resources>
    <string name="app_name">Diploma</string>
    <string name="status_planned">Planned</string>
    <string name="status_overdued">Overdued</string>
    <string name="status_today">Today</string>
    <string name="status_no">No deadline</string>
    <string name="note_add_title">New note</string>
    <string name="note_update_title">Update/delete note</string>
    <string name="hint_title">Enter note title</string>
    <string name="hint_text">Enter note text</string>
    <string name="checkbox_deadline">Has deadline</string>
    <string name="field_deadline">Click to modify</string>
    <string name="no_title_or_text">Title or text should be filled</string>
    <string name="new_note_added">New note added!</string>
    <string name="note_updated">Note updated!</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="b_save">Save</string>
    <string name="b_delete">Delete</string>
    <string name="b_update">Update</string>
    <string name="dialog_sure">Are you sure, you want to delete this note?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="extra_label" translatable="false">task</string>
    <string name="date_divider">/</string>
    <string name="login_title">Enter PIN</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_reset">С</string>
    <string name="circle_desc">pin circle</string>
    <string name="pin_pref" translatable="false">pin</string>
    <string name="first_run_pref" translatable="false">firstRun</string>
    <string name="pin_error">PIN doesn\'t match!</string>
    <string name="pin_edit_title">Enter new PIN</string>
    <string name="pin_edit_error">Incorrect PIN</string>
    <string name="pin_edit_ok">PIN changed</string>
    <string name="note_list_title">Notes</string>
</resources>
